fixed the alignment issue on topic page

--- a/public/style/less/media/topic.less
+++ b/public/style/less/media/topic.less
@@ -388,7 +388,7 @@
         .explore-item{
             width: 31%;
             &:nth-child(even) {
-                margin-right: 2rem;
+                margin-right: 2.5rem;
             }
             &:last-child {
                 margin-right: 0;
